	- [kevin] $2257: reenabled OLE interface (tested by Tyler) (NOTE: does NOT work in WINE)
	- [kevin] $2262: don't crash when attempting to load 8 MB images from old TiEmu
	- [kevin] $2264: use kde-config to locate KDE instead of hardcoded directories which were missing /usr/lib64
	- [kevin] $2265: fix --enable-shared-itcl so the shared libitcl and libitk are built with -fPIC

- 07/07/2006, version 2.81b
	- [kevin] $2128: HW4 has 8 MB of FlashROM
	- [kevin] $2130: complete HW4 images to 8 MB
	- [kevin] $2136: fixed NULL dereference in filesel.c
	- [roms]  $2140: added TiGroup file support (in sending only)
	- [roms]  $2142: fixed wrong timeout value (2 variables, 1 (mis-)used)
	- [roms]  $2143: clean-up and overhaul in the progress bars
	- [roms]  $2144: updated to rely on ticalcs2 progress bars data-base
	- [roms]  $2146: fixed updating of third pbar counter. Fixed use of ticalcs2 pbar database.
	- [kevin] $2147: don't crash DCOP client program when running reset_calc through DCOP with the debugger running
	- [kevin] $2153: fixed warnings in TiEmu patches to GDB
	- [kevin] $2154: fixed warnings, fixed UAE to detect 64-bit integer types under glibc, fixed is_varname
	- [kevin] $2155: fixed warnings in the assembly-level debugger
	- [kevin] $2156: fixed more warnings and a few file descriptor leaks
	- [kevin] $2159: fixed "TIGCC" and "ticalc.org" bookmarks to use the respective official spelling
	- [kevin] $2162: only run Qt event hook (processing GTK+ events) when currently displaying a modal dialog
	                 (fixes DCOP hang after reset_calc with debugger running, due to the infinite loop protection)
	- [kevin] $2162: disable "Debug file with TiEmu" when the debugger is running
	- [kevin] $2162: added Seamonkey to the browser list, suggest Firefox instead of the obsolete Mozilla Suite
	- [kevin] $2163: clear command line in execute_command
	- [kevin] $2164: changed DCOP/OLE ready_for_transfers to really check if the emulated calculator is ready